fixed spacing

--- a/src/components/PortfolioContainer/style.css
+++ b/src/components/PortfolioContainer/style.css
@@ -32,7 +32,7 @@ form {
 
 #project-show {
     color: rgb(228, 224, 222);
-    padding: 50px 0 10px 0;
+    padding: 5rem 0 1rem 0;
     text-align: center;
     font-size: 2.5em;
     font-weight: bolder;
