--- a/src/components/StoryContainer/style.css
+++ b/src/components/StoryContainer/style.css
@@ -1,5 +1,5 @@
 #story-container {
-    padding-top: 65px;
+    padding: 5rem 0 1rem 0;
 }
 
 h1 {
